styles/config/utils/_gap.scss
@use "../spacing" as *;

@each $spacing-key, $spacing-value in $spacing {
    body:not([class="no-webp"]) .gap-#{$spacing-key} {
        gap: spacing-get($spacing-key);
    }
    body:not([class="no-webp"]) .gap-x-#{$spacing-key} {
        column-gap: spacing-get($spacing-key);
    }
    body:not([class="no-webp"]) .gap-y-#{$spacing-key} {
        row-gap: spacing-get($spacing-key);
    }

    body.no-webp {
        .gap-x-#{$spacing-key} > * {
            margin-left: spacing-get($spacing-key);
        }
        .gap-x-#{$spacing-key} {
            margin-left: calc(#{spacing-get($spacing-key)} * -1);
        }
        .gap-y-#{$spacing-key} > * {
            margin-bottom: spacing-get($spacing-key);
        }
        .gap-y-#{$spacing-key} {
            margin-bottom: calc(#{spacing-get($spacing-key)} * -1);
        }
        .gap-#{$spacing-key} > * {
            margin-bottom: spacing-get($spacing-key);
            margin-left: spacing-get($spacing-key);
        }
        .gap-#{$spacing-key} {
            margin-bottom: calc(#{spacing-get($spacing-key)} * -1);
            margin-left: calc(#{spacing-get($spacing-key)} * -1);
        }
    }
}

